- Huge architecture rework of the Change API - Change types (Add, Remove, Retain...) are now seperated among multiple super-classes which ensures better encapsulation - Changes are now responsible for specifying how they can be sequentialise with the "toSequential" method - Got "SequentialAdd" and "SequentialRetain" working in an optimised way !!! - Updated methods in Change previously reliant on having a class passed as a parameter to use the "clazz" field instead - Changes now know their own class thanks to the "clazz" field - Can now use "Change.of" to create an empty change based only on a class (function like an empty array) - Updated methods in ArrayUtil to avoid having to specify a class when calling them on an array - Added the "Origin" class which acts as a base for chaining changes using "Change.of" - Made it so "removeFirst" method removes only the first instance of values but can be give *multiple* values as parameters, removing the need to chain "remove" multiple times. The same is now true for "retainFirst" - updated quickFind to quickFindFirst to find the first instance of *multiple* values (also seems to be more performant :) ) - updated the toString method in each Change subclass to be more explicit